dia 5 por finnnnnnnn entendiiiiii