@@ -9,14 +9,13 @@ public class Dia4 {
     // ✅ Crea aquí tu propio `record`, con al menos 4 campos (por ejemplo: nombre, edad, salario, departamento)
     // ✅ Agrega un método dentro del record que imprima toda su información formateada
     // Puedes llamarlo `detalle()` o como prefieras
-    public record Empleado(String nombre, Integer edad, Float salario, String departamento){
-
-        public String detalle(){
-            return "empleado{nombre: "+nombre+
-                    ",edad: "+edad+
-                    ",salario: "+salario+
-                    ",departamento: "+departamento;
-        }
+   public record Empleado(String nombre, Integer edad, Float sueldo, String departamento){
+       public String detalle(){
+           return "nombre: "+ nombre+";\n"
+                   +"edad: "+ edad+";\n"
+                   +"sueldo: "+ sueldo+";\n"
+                   +"departamento: "+ departamento;
+       }
     }
 
     public static void main(String[] args) {
@@ -38,15 +37,20 @@ public class Dia4 {
         // - "✅ Juan está saludable" si su edad está entre 18 y 60
         // - "❌ Juan no está saludable" en otro caso
         // Recorre la lista con una función que genere ese mensaje y otra que lo imprima.
-        Function<List<Empleado>, List<String>> e1 = empleados -> empleados.stream()
-                .map(empleado -> empleado.edad() >= 18 && empleado.edad() <= 60
-                        ?  empleado.nombre() + " está saludable"
-                        : empleado.nombre() + " no está saludable")
-                .collect(Collectors.toList());
-        Consumer<List<String>> ej11 = empleados -> empleados
-                .forEach(info -> System.out.println(info));
+        Function<List<Empleado>, List<String>> ej1 = empleados -> {
+            List<String> lista = new ArrayList<>();
+            empleados.forEach(empleado -> {
+                boolean saludable = empleado.edad() >= 18 && empleado.edad() <= 60;
+                String valor = empleado.nombre()+" ";
+                valor+= (saludable)?"está saludable": "no está saludable";
+                lista.add(valor);
+            });
+            return lista;
+        };
+        Consumer<List<String>> ej11 = lista -> lista.forEach(
+                elemento -> System.out.println(elemento));
 
-        ej11.accept(e1.apply(empleadosList));
+        ej11.accept(ej1.apply(empleadosList));
 
         // 🧠 Ejercicio 2: Generador dinámico de empleados
         // Crea una función que reciba un número `n` y retorne una lista de `n` empleados con:
@@ -54,60 +58,52 @@ public class Dia4 {
         // - edad aleatoria entre 20 y 65
         // - salario aleatorio entre 1.000.000 y 10.000.000
         // - departamento aleatorio entre "Ventas", "IT", "RRHH"
-        Function<Integer, List<Empleado>> ej2 = cantidad -> {
-            List<Empleado> result = new ArrayList<>();
+        Function<Integer, List<Empleado>> generador = n -> {
+            List<Empleado> empleados = new ArrayList<>();
             Random r = new Random();
-            List<String> departamentos = List.of("Ventas", "IT", "RRHH");
-
-            for (int i = 1; i <= cantidad; i++) {
-                String nombre = "Empleado" + i;
-                int edad = r.nextInt(46) + 15;
-                float salario = r.nextFloat() * (10000000.0f - 1000000.0f) + 1000000.0f;
-                String departamento = departamentos.get(r.nextInt(departamentos.size()));
-
-                result.add(new Empleado(nombre, edad, salario, departamento));
+            List<String> dep = Arrays.asList("Ventas", "IT", "RRHH");
+            for (int i = 1; i <= n; i++) {
+                String nombre = "Empleado"+i;
+                Integer edad = r.nextInt(66) + 20;
+                Float salario = r.nextFloat()* (10000000.0f - 1000000.0f) + 1000000.0f;
+                String departamento = dep.get(r.nextInt(3));
+                empleados.add(new Empleado(nombre, edad, salario, departamento));
             }
-
-            return result;
+            return empleados;
         };
 
         // 🧠 Ejercicio 3: Filtrado por edad y mapeo de nombres
         // A partir de una lista de empleados, obtén una nueva lista con los nombres
         // de quienes tengan entre 25 y 40 años (inclusive).
-        List<String> ej3 = ej2.apply(5).stream()
-                .filter(e -> e.edad() >= 25 && e.edad() <= 40)
-                .map(e -> e.nombre())
+        Function<List<Empleado>, List<String>> ej3 = lista -> lista.stream()
+                .filter(empleado -> empleado.edad() >= 25 && empleado.edad() <= 40)
+                .map(empleado -> empleado.nombre())
                 .collect(Collectors.toList());
 
         // 🧠 Ejercicio 4: Buscar extremos
         // Encuentra el empleado con mayor salario y el de menor edad.
         // Imprime su método detalle()
+
         Consumer<List<Empleado>> ej4 = lista -> {
-            Optional<Empleado> a = lista.stream()
-                    .max(Comparator
-                            .comparingDouble(Empleado::salario)
+           Optional<Empleado> e = lista.stream().max(Comparator.comparingInt(Empleado::edad)
                             .reversed()
-                            .thenComparingInt(Empleado::edad)
-                    );
-            a.ifPresent(e -> System.out.println(e.detalle()));
+                            .thenComparing(Comparator.comparingDouble(Empleado::sueldo)));
+
+           e.ifPresentOrElse(em -> System.out.println(em.detalle()),
+                   () -> System.out.println("no encontrado"));
         };
-        ej4.accept(ej2.apply(5));
-
-
+        ej4.accept(generador.apply(10));
 
         // 🧠 Ejercicio 5: Validación personalizada
         // Tienes un empleado:
         // - Si es menor de 18 años, lanza una IllegalArgumentException
         // - Si es válido, imprime su nombre en mayúsculas con un saludo
-        Consumer<List<Empleado>> ej5 = list -> list.forEach(
-                empleado -> {
-                    if(empleado.edad() < 18){
-                        throw new IllegalArgumentException("Muy joven");
-                    }
-                    System.out.println(empleado.nombre().toUpperCase()+ "Bienvenido");
-                }
-        );
-
-        ej5.accept(ej2.apply(5));
+        Consumer<Empleado> ej5 = empleado -> {
+            if(empleado.edad() < 18){
+                throw new IllegalArgumentException("oigaaaaaaaaaaa abuso de menoress");
+            }else{
+                System.out.println(empleado.nombre()+" Bienvenido");
+            }
+        };
     }
 }
